{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 313,
  "lineage": "1b003695-6874-2a42-e7f0-b9bc0757bce0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e56833e4d013184",
            "arn": "arn:aws:ec2:eu-west-2:233966445372:elastic-ip/eipalloc-09e56833e4d013184",
            "domain": "vpc",
            "id": "eipalloc-09e56833e4d013184",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-135-70-209.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.70.209",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mtc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:internet-gateway/igw-0bd7ee019cdc53674",
            "id": "igw-0bd7ee019cdc53674",
            "owner_id": "233966445372",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0d1dda03e3f4b218a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e56833e4d013184",
            "association_id": "eipassoc-0ca9a60086d327b13",
            "connectivity_type": "public",
            "id": "nat-00b4a7ce470c8fd06",
            "network_interface_id": "eni-087e55ef1ee665418",
            "private_ip": "10.123.1.52",
            "public_ip": "18.135.70.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0af29bb2f237b198b",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.example",
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:route-table/rtb-0bd5c89ff5befa42d",
            "id": "rtb-0bd5c89ff5befa42d",
            "owner_id": "233966445372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00b4a7ce470c8fd06",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1dda03e3f4b218a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.example",
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:route-table/rtb-0f5bee970e7871c58",
            "id": "rtb-0f5bee970e7871c58",
            "owner_id": "233966445372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd7ee019cdc53674",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1dda03e3f4b218a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033d32c9419d3c1a2",
            "route_table_id": "rtb-0bd5c89ff5befa42d",
            "subnet_id": "subnet-09da01408eaa74800"
          },
          "dependencies": [
            "module.vpc.aws_eip.example",
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.mtc_private_subnet",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc51a93828585eb9",
            "route_table_id": "rtb-0bd5c89ff5befa42d",
            "subnet_id": "subnet-06189142629901fb9"
          },
          "dependencies": [
            "module.vpc.aws_eip.example",
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.mtc_private_subnet2",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029a88ee432eea9f6",
            "route_table_id": "rtb-0f5bee970e7871c58",
            "subnet_id": "subnet-0af29bb2f237b198b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dca4b7ea09daf6f",
            "route_table_id": "rtb-0f5bee970e7871c58",
            "subnet_id": "subnet-0d7fc93c4718b1799"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.mtc_public_subnet_2",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mtc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:security-group/sg-01f27164e3c543b9e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f27164e3c543b9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250308143037223600000001",
            "name_prefix": "terraform-",
            "owner_id": "233966445372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mtc_security_group"
            },
            "tags_all": {
              "Name": "mtc_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1dda03e3f4b218a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:subnet/subnet-09da01408eaa74800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09da01408eaa74800",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233966445372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet1"
            },
            "tags_all": {
              "Name": "PrivateSubnet1"
            },
            "vpc_id": "vpc-0d1dda03e3f4b218a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:subnet/subnet-06189142629901fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06189142629901fb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233966445372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet2"
            },
            "tags_all": {
              "Name": "PrivateSubnet2"
            },
            "vpc_id": "vpc-0d1dda03e3f4b218a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:subnet/subnet-0af29bb2f237b198b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af29bb2f237b198b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233966445372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-0d1dda03e3f4b218a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:subnet/subnet-0d7fc93c4718b1799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7fc93c4718b1799",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233966445372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-0d1dda03e3f4b218a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:vpc/vpc-0d1dda03e3f4b218a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-01be212f5c4600146",
            "default_route_table_id": "rtb-0d271b7861aabc465",
            "default_security_group_id": "sg-06b6f1c7ef367f96a",
            "dhcp_options_id": "dopt-08ab0288eb8df5f53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1dda03e3f4b218a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d271b7861aabc465",
            "owner_id": "233966445372",
            "tags": {
              "Name": "TerraformVPC"
            },
            "tags_all": {
              "Name": "TerraformVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:vpc/vpc-052a6e4d44da980db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02da71325ce6b3da7",
            "default_route_table_id": "rtb-0f82b473886f52da5",
            "default_security_group_id": "sg-0feeb5a2c40db880a",
            "dhcp_options_id": "dopt-08ab0288eb8df5f53",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052a6e4d44da980db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f82b473886f52da5",
            "owner_id": "233966445372"
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:vpc/vpc-05d396a335c28f644",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-00829d07db7dd2703",
            "default_route_table_id": "rtb-006c7c1bb1c01ab6f",
            "default_security_group_id": "sg-075d9732b1b0d068c",
            "dhcp_options_id": "dopt-08ab0288eb8df5f53",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d396a335c28f644",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006c7c1bb1c01ab6f",
            "owner_id": "233966445372"
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:vpc/vpc-0c2924802fa3ea194",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0b3c4910102fec999",
            "default_route_table_id": "rtb-0ba04842d889bae3d",
            "default_security_group_id": "sg-05d1fe6ce7b73a0c4",
            "dhcp_options_id": "dopt-08ab0288eb8df5f53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2924802fa3ea194",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba04842d889bae3d",
            "owner_id": "233966445372",
            "tags": {
              "Name": "TerraformVPC2"
            },
            "tags_all": {
              "Name": "TerraformVPC2"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0ba69468afc4126bf",
            "peer_owner_id": "233966445372",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-0d1dda03e3f4b218a",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between foo and bar"
            },
            "tags_all": {
              "Name": "VPC Peering between foo and bar"
            },
            "vpc_id": "vpc-0c2924802fa3ea194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc",
            "module.vpc2.aws_vpc.mtc_vpc"
          ]
        }
      ]
    }
  ]
}